<?xml version="1.0"?>
<package format="2">
  <name>hsr_navigation</name>
  <version>0.0.0</version>
  <description>The hsr_navigation package</description>

  <maintainer email="hassouna@uni-bremen.de">Vanessa Hassouna</maintainer>
  <maintainer email="hawkin@uni-bremen.de">Alina Hawkin</maintainer>
	
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
